Add copyright info to footer element

--- a/0x00-semantic_html/0-index.html
+++ b/0x00-semantic_html/0-index.html
@@ -26,9 +26,9 @@ Remember the structure of a html files starts with a doctype -->
             </section>
         </article>
     </main>
-    <footer>
-        
-    </footer>
-</body>
 
+</body>
+    <footer>
+       <p> @copyright</p>
+    </footer>
 </html>
